--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -96,6 +96,7 @@ general:
     DISABLE: 'Выключить'
     SURE: 'Вы уверены?'
     CONFIRM_DELETE: 'Да, удалите это'
+    CONFIRM_LDAP_SYNC: 'Да, сделать LDAP синхронизацию'
     CURRENT_URL_NOT_VALID: 'Текущий URL больше недоступен'
 datatables:
     PROCESSING: 'Подождите...'
