--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -20,6 +20,7 @@ LAST_LOGIN: 'Last login'
 REGISTER: 'Register'
 
 data_grid:
+    LDAP_USERS: 'LDAP Synchronization'
     USERS: "Users"
     EDIT_USER: "Edit user"
     EDIT: "Save"
