--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -20,6 +20,7 @@ LAST_LOGIN: 'Последний удачный вход'
 REGISTER: 'Зарегистрирован'
 
 data_grid:
+    LDAP_USERS: 'LDAP синхронизация'
     USERS: "Пользователи"
     EDIT_USER: "Изменить данные"
     EDIT: "Сохранить"
