AC-173 Lead Admin

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -69,12 +69,14 @@ sidebar:
         DASHBOARD: "Dashboard"
         USERS: "Users"
         LOCALES: "Locales"
+        LEADS: "Leads"
         manager:
             CLUSTER: "Clusters"
             APPLICATION: "Applications"
             CONNECTION: "Connections"
             COMPONENT: "Components"
             LOCALE: "Locales"
+            LEADS: "Leads"
         received:
             CUSTOMER: "Customers"
             EMAIL: "Emails"
