AC-322 Create Application actions for admin panel

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/applications.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/applications.en.yml
@@ -21,7 +21,7 @@ SPOT_API_URL: Spot API URL
 ENTER_SPOT_API_PUBLIC_URL: Enter spot API public url
 SPOT_API_PUBLIC_URL: Spot API public url
 STATUS: Status
-CHECK_STATUS: Status
+CHECK_STATUS: Check Status
 DISABLE_APPLICATION: Disabled
 ENABLE_APPLICATION: Enabled
 CLUSTER: Cluster
