AC-331 Mail Admin page. Add data for SHOW action

--- a/src/Araneum/Bundle/MailBundle/Resources/translations/mails.en.yml
+++ b/src/Araneum/Bundle/MailBundle/Resources/translations/mails.en.yml
@@ -4,6 +4,7 @@ SHOW_MAIL: Show mail
 SENDER: Sender
 TARGET: Target
 HEADLINE: Headline
+BODY: Body
 STATUS: Status
 SENT_AT: Sent at
 APPLICATION: Application
