--- a/src/Araneum/Bundle/AgentBundle/Resources/translations/leads.en.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/translations/leads.en.yml
@@ -6,6 +6,8 @@ EMAIL: Email
 APP_KEY: App KEY
 Application: Application
 CREATED_AT: Created At
+DELETE_LEAD: Delete lead
+SHOW_LEAD: Show lead
 placeholder:
     FIRST_NAME: Enter first name
     LAST_NAME: Enter last name
