AC-343 View useLDAP in page Users.

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -85,6 +85,7 @@ sidebar:
             CUSTOMER: "Customers"
             EMAIL: "Emails"
 general:
+    USE_LDAP: 'Use LDAP'
     SAVE: 'Save'
     CANCEL: 'Cancel'
     FILTERS: 'Filter'
